# icarus-v2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yaml
src/: config.rs  error.rs  image_utils.rs  lib.rs  main.rs  multi_format_cropping.rs
src/models/: candle_backend.rs  inspector.rs  mod.rs  onnx_backend.rs  postprocessor.rs  preprocessor.rs
src/models/backbones/: dinov2.rs  mod.rs
src/models/implementations/: detr_resnet101.rs  dfine_l.rs  mod.rs  rf_detr_large.rs  rf_detr_medium.rs  yolov10_ort.rs  yolov9_c.rs
src/models/postprocessors/: common.rs  mod.rs
src/models/preprocessors/: detr.rs  mod.rs  yolo.rs
tests/: integration_tests.rs
