[package]
name = "icarus-v2"
version = "2.0.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
ndarray-stats = "0.5"
image = "0.25"
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Used in inspector tests to create temporary files with invalid ONNX content.
tempfile = "3"

[[bin]]
name = "icarus-v2"
path = "src/main.rs"

[lib]
name = "icarus_v2"
path = "src/lib.rs"
